--- a/examples/counties/index.html
+++ b/examples/counties/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="splitearth_v12b.png">
 
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" type="text/css" href="vectormap.css">
+    <link rel="stylesheet" type="text/css" href="tilekiln.css">
 
     <script src="main.min.js"></script>
   </head>
