--- a/examples/mvt/index.html
+++ b/examples/mvt/index.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-    <title>vectormap - beta</title>
+    <title>tilekiln - beta</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
