--- a/examples/labels/index.html
+++ b/examples/labels/index.html
@@ -7,6 +7,7 @@
 
     <link rel="icon" type="image/png" href="splitearth_v12b.png">
 
+    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=PT Sans'>
     <link rel="stylesheet" type="text/css" href="styles.css">
 
     <script src="main.min.js"></script>
