Add hideGroup and showGroup methods
- main.js: create separate groupNames and styleGroups arrays, where
  styleGroups elements have both name and visible properties. Expose
  hideGroup and showGroup methods to change visible flag
- tile.js: update to accept new styleGroup structure
- rendering/renderer.js: Update composite method to check visible
  flag for each group

--- a/examples/macrostrat/index.html
+++ b/examples/macrostrat/index.html
@@ -26,8 +26,8 @@
         <button id="down" class="nav">v</button>
       </div>
       <p>
-        <button id="toggleLines">Toggle Line Visibility</button>
-        <button id="toggleHillshade">Toggle Hillshade Visibility</button>
+        <button id="toggleBurwell">Toggle Burwell Polygon Visibility</button>
+        <button id="toggleLabels">Toggle Label Visibility</button>
       </p>
     </div>
 
