Update dependencies and examples build process

--- a/examples/dynamic/index.html
+++ b/examples/dynamic/index.html
@@ -12,7 +12,7 @@
     <script src="main.min.js"></script>
   </head>
 
-  <body onload="dynamic.main()">
+  <body onload="app.main()">
     <p id="zxy">5/8/12</p>
     <div class="container">
       <div id="topleft">
