--- a/examples/mvt/index.html
+++ b/examples/mvt/index.html
@@ -12,7 +12,7 @@
     <script src="main.min.js"></script>
   </head>
 
-  <body onload="mvt.main()">
+  <body onload="app.main()">
     <div id="map"></div>
   </body>
 
