--- a/examples/workers/index.html
+++ b/examples/workers/index.html
@@ -12,7 +12,7 @@
     <script src="main.min.js"></script>
   </head>
 
-  <body onload="workers.main()">
+  <body onload="app.main()">
     <div class="leftSide">
       <p id="zxy">Tile coordinates</p>
       <div id="map">
