Refactor main.js to return a promise. Test in dynamic example

--- a/examples/dynamic/index.html
+++ b/examples/dynamic/index.html
@@ -21,7 +21,7 @@
       </div>
       <button id="up" class="nav">^</button>
       <button id="left" class="nav">&lt;</button>
-      <div id="map"></div>
+      <canvas id="map" class="display-canvas"></canvas>
       <button id="right" class="nav">&gt;</button>
       <button id="down" class="nav">v</button>
     </div>
