Update all examples to use promise-based setup

--- a/examples/mvt/index.html
+++ b/examples/mvt/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body onload="app.main()">
-    <div id="map"></div>
+    <canvas id="map" class="display-canvas"></canvas>
   </body>
 
 </html>
