--- a/examples/macrostrat/index.html
+++ b/examples/macrostrat/index.html
@@ -15,7 +15,7 @@
   <body onload="app.main()">
     <div class="leftSide">
       <p id="zxy">Tile coordinates</p>
-      <div id="map">
+      <div class="container">
         <div id="topleft">
           <button id="zoomOut" class="nav">-</button>
           <button id="zoomIn" class="nav">+</button>
@@ -24,6 +24,7 @@
         <button id="left" class="nav">&lt;</button>
         <button id="right" class="nav">&gt;</button>
         <button id="down" class="nav">v</button>
+        <canvas id="map" class="display-canvas"></canvas>
       </div>
       <p>
         <button id="toggleBurwell">Toggle Burwell Polygon Visibility</button>
