--- a/examples/dynamic/index.html
+++ b/examples/dynamic/index.html
@@ -8,7 +8,11 @@
     <link rel="icon" type="image/png" href="splitearth_v12b.png">
 
     <link rel="stylesheet" type="text/css" href="styles.css">
-
+    <script>
+      if (global === undefined) {
+        var global = window;
+      }
+    </script>
     <script src="main.min.js"></script>
   </head>
 
