--- a/examples/geotiff/index.html
+++ b/examples/geotiff/index.html
@@ -8,11 +8,13 @@
     <link rel="icon" type="image/png" href="splitearth_v12b.png">
 
     <link rel="stylesheet" type="text/css" href="styles.css">
+
     <script>
       if (global === undefined) {
         var global = window;
       }
     </script>
+    <script src="../../node_modules/plotty/dist/plotty.min.js"></script>
     <script src="main.min.js"></script>
   </head>
 
@@ -31,8 +33,8 @@
         <canvas id="map" class="display-canvas"></canvas>
       </div>
       <p>
-        <button id="toggleBurwell">Toggle Burwell Polygon Visibility</button>
-        <button id="toggleLabels">Toggle Label Visibility</button>
+      <button id="toggleBurwell">Toggle Burwell Polygon Visibility</button>
+      <button id="toggleLabels">Toggle Label Visibility</button>
       </p>
     </div>
 
